--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_global.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_global.scss
@@ -6,7 +6,7 @@ $blue: #5BD2FF;
 $orange: #FF891D;
 $yellow: #FCF661;
 $lightGrey: #e8e8e8;
-$medGrey: #4c4c4c;
+$medGrey: #585858;
 $hoverGrey: #d9d9d9;
 $space: 18px;
 
@@ -71,6 +71,7 @@ body {
     }
     i, em {
         font-family: 'Lynon Reg Italic', sans-serif;
+        font-style: normal;
     }
 }
 
