--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
@@ -204,7 +204,7 @@
 
 @mixin search-font-mobile {
     font-family: 'Suisse Reg', sans-serif;
-    color: $black !important;
+    color: $white !important;
     font-size: 24px;
     i, em {
         font-family: 'Suisse Reg Italic', sans-serif;
