--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_comments.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_comments.scss
@@ -33,7 +33,8 @@ div#comments {
         }
     }
     .comment-metadata {
-        font-style: italic;
+//        font-style: italic;
+        font-family: 'Lynon Reg Italic', sans-serif;
         font-size: 13px;
         .comment-edit-link {
             font-style: normal;
