--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_spotlight.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_spotlight.scss
@@ -16,7 +16,7 @@
         margin: 0;
     }
     .watn-sub {
-        font-style: italic;
+        font-family: 'Suisse Reg Italic', sans-serif;
     }
     .watn-arrow, .watn-sep {
         display: flex;
