--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_dell-media-queries.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_dell-media-queries.scss
@@ -16,9 +16,7 @@
 //   }
 //}
 
-@media only screen 
-   and (max-width : 1366px) 
-   and (max-height : 768px) {
+@media only screen and (max-height: 700px) and (min-width: 768px) {
    .drawer-tags-row a {
         font-size: 2vw;
         line-height: 2.5vw;
@@ -34,11 +32,11 @@
 //   }
 //}
 
-@media only screen 
-   and (max-width : 1280px) 
-   and (max-height : 800px) {
-   .drawer-tags-row a {
-        font-size: 2vw;
-        line-height: 2.5vw;
-   }
-}
+//@media only screen 
+//   and (max-width : 1280px) 
+//   and (max-height : 700px) {
+//   .drawer-tags-row a {
+//        font-size: 2vw;
+//        line-height: 2.5vw;
+//   }
+//}
