--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_page-contact.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_page-contact.scss
@@ -30,7 +30,7 @@ h2.contact-masthead-title {
     line-height: 26px;
     margin-top: 30px;
     .contact-person-title {
-        font-style: italic;
+        font-family: 'Lynon Reg Italic', sans-serif;
         margin: 0;
     }
     .contact-person-name {
