--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_by-the-numbers.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_by-the-numbers.scss
@@ -13,7 +13,7 @@
         margin-bottom: 16px;
     }
     .btnums-sub {
-        font-style: italic;
+        font-family: 'Lynon Reg Italic', sans-serif;
         padding-bottom: 16px;
         border-bottom: 2px dotted $black;
         text-align: left;
